Google Analystics, Google Addsence 추가

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -113,4 +113,8 @@
   {% unless site.theme_mode %}
     {% include mode-toggle.html %}
   {% endunless %}
+  
+  <!-- Google Addsence -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5610113625938743"
+     crossorigin="anonymous"></script>
 </head>
