--- a/_includes/comments/giscus.html
+++ b/_includes/comments/giscus.html
@@ -16,14 +16,14 @@
     let giscusAttributes = {
       "src": "https://giscus.app/client.js",
       "data-repo": "{{ site.comments.giscus.repo}}",
-      "data-repo-id": "{{ site.comments.giscus.repo_id }}",
+      "data-repo_id": "{{ site.comments.giscus.repo-id }}",
       "data-category": "{{ site.comments.giscus.category }}",
-      "data-category-id": "{{ site.comments.giscus.category_id }}",
+      "data-category_id": "{{ site.comments.giscus.category-id }}",
       "data-mapping": "{{ site.comments.giscus.mapping | default: 'pathname' }}",
       "data-reactions-enabled": "1",
       "data-emit-metadata": "0",
       "data-theme": initTheme,
-      "data-input-position": "{{ site.comments.giscus.input_position | default: 'bottom' }}",
+      "data-input_position": "{{ site.comments.giscus.input-position | default: 'bottom' }}",
       "data-lang": "{{ site.comments.giscus.lang | default: lang }}",
       "crossorigin": "anonymous",
       "async": ""
